--- a/source/_assets/stylesheets/components/sidebar.less
+++ b/source/_assets/stylesheets/components/sidebar.less
@@ -2,7 +2,18 @@
   margin-top: 0;
   margin-bottom: 0;
   padding: 0 16px;
+  background-color: @gray-light;
+  border-bottom: 1px solid @gray;
+  li {
+    a {
+      padding: 0;
+    }
+  }
   .media-up(@screen-tablet, {
+    background-color: transparent;
+    border-bottom: none;
+    padding-top: 0;
+    padding-bottom: 0;
     margin-top: 45px;
     margin-bottom: 45px;
   });
@@ -18,7 +29,7 @@
     }
   }
   li {
-    &:not(:last-child) { 
+    &:not(:last-child) {
       margin-bottom: 9px;
     }
     &.collapsibleListOpen {
@@ -71,21 +82,5 @@
     line-height: 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-  }
-}
-
-.sidebar {
-  background-color: @gray-light;
-  border-bottom: 1px solid @gray;
-  .media-up(@screen-tablet, {
-    background-color: transparent;
-    border-bottom: none;
-    padding-top: 0;
-    padding-bottom: 0;
-  });
-  li {
-    a {
-      padding: 0;
-    }
   }
 }
